# autoeval

./: .dockerignore  .env.example  .gitignore  DBINFO.md  DEV_260311.md  DEV_260312.md  DEV_260313.md  DEV_260317.md  DEV_260318.md  DEV_260318v2.md  DEV_260318v3.md  DEV_260319.md  DEV_HIERARCHY_PLAN.md  DEV_PROMPT_ADAPTIVE.md  IMPLEMENTATION_PLAN.md  PIPELINE_DESIGN.md  README.md  analyze_hierarchy.py  default.sqlite  docker-compose.dev.yml  docker-compose.yml  generate_representative.py  main.py  pyproject.toml  qa_quality_evaluator.py  trulens_eval_test.py
backend/: .env.example  Dockerfile  README.md  evaluation_api.py  exceptions.py  generation_api.py  ingestion_api.py  main.py  requirements.txt
backend/api/: evaluation_api.py  generation_api.py  (+1 more)
docs/: ARCHITECTURE_COMPARISON.md  DEV_260313.md  DEV_260318.md  DEV_260318v2.md  DEV_260320.md  DEV_260322.md  DEV_260323.md  DEV_260323v2.md  DEV_260324.md  DEV_260324v2.md  DEV_260325.md  DEV_260326.md  DEV_260327.md  DEV_260328.md  DEV_260330.md  DEV_260331.md  DEV_260401.md  DEV_260402.md  DEV_260403.md  DEV_260406.md  DEV_260406v2.md  DEV_260407.md  DEV_260407v2.md  DEV_260408.md  DEV_260409.md  DEV_260410.md  DEV_260413.md  DEV_260414.md  DEV_260415.md  DEV_260507.md  DEV_260508.md  DEV_260511.md  DEV_260522.md  DEV_260629.md  DEV_PRIORITY.md  DEV_PROMPT_ADAPTIVE.md  FRONTEND_REVIEW.md  INTEGRATION_GUIDE.md  INTEGRATION_PLAN.md  MAIN_PY_INTEGRATION.md  (+26 more)
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  metadata.json  nginx.conf  package-lock.json  package.json  readme.md  vercel.json  vite.config.ts
(+126 files in other folders)
