[project]
name = "autoeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.84.0",
    "chromadb>=1.5.4",
    "deepeval>=3.8.9",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "langchain-anthropic>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "langchain-text-splitters>=0.3.0",
    "requests>=2.32.5",
    "rich<14.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "supabase>=2.28.0",
    "uvicorn[standard]>=0.41.0",
    "opendataloader-pdf>=2.0.2",
]
